<resources>
    <string name="app_name">Incremental</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Incremental</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_backup">Save Backup File</string>
    <string name="action_load_backup">Load Backup File</string>
    <string name="action_sort_by_average_week_hours">Sort by Average Week Hours</string>
    <string name="action_sort_by_current_week_hours">Sort by Current Week Hours</string>
    <string name="action_select_incomplete_tasks">Select All Incomplete Tasks</string>
    <string name="action_delete_task">Delete Task</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_days_off">Days Off</string>
    <string name="menu_time_periods">Time Periods</string>
    <string name="menu_task_groups">Task Groups</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_archive">Archive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
