<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_backup"
        android:orderInCategory="100"
        android:title="@string/action_save_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load_backup"
        android:orderInCategory="100"
        android:title="@string/action_load_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_average_week_hours"
        android:orderInCategory="100"
        android:title="@string/action_sort_by_average_week_hours"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_sort_by_current_week_hours"
        android:orderInCategory="100"
        android:title="@string/action_sort_by_current_week_hours"
        app:showAsAction="never"
        android:visible="false"/>
</menu>
