<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_time_periods"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_time_periods" />
        <item
            android:id="@+id/nav_task_groups"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_task_groups" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_archive" />
    </group>

</menu>
