<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="me.tazadejava.incremental.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_task_groups"
        android:name="me.tazadejava.incremental.ui.groups.GroupViewFragment"
        android:label="@string/menu_task_groups"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_time_periods"
        android:name="me.tazadejava.incremental.ui.timeperiods.TimePeriodsFragment"
        android:label="@string/menu_time_periods"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_archive"
        android:name="me.tazadejava.incremental.ui.archive.ArchiveFragment"
        android:label="@string/menu_archive"
        tools:layout="@layout/fragment_archive" />
</navigation>